fixed scrolling layout issue

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -104,6 +104,7 @@
     opacity: 1;
     visibility: visible;
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+    height: auto;
   }
 }
 
@@ -112,7 +113,8 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-    height: 0;
+    max-height: 0;
+    overflow: hidden;
   }
 }
 
